Carregando arquivo OK

--- a/RallyVision/res/values/strings.xml
+++ b/RallyVision/res/values/strings.xml
@@ -111,4 +111,8 @@
     <string name="slider_carregar_prova">Carregar Arquivo de Prova</string>
 
 
+    <!--Slider-->
+    <string name="slider_carregar_arquivo_invalido">Arquivo inválido</string>
+
+
 </resources>
